<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
  <LinearLayout android:id="@+id/filterview"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/artist_view"
                  android:visibility="gone">
      <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artist_label"/>
      <EditText android:id="@+id/artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:inputType="none"
      />
      <View android:layout_height="2dip" android:layout_width="match_parent"
            android:background="#FF909090" />
    </LinearLayout>

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/album_view"
                  android:visibility="gone">
      <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/album_label"/>
      <EditText android:id="@+id/album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:inputType="none" />
      <View android:layout_height="2dip" android:layout_width="match_parent"
            android:background="#FF909090" />
    </LinearLayout>

      <TextView android:text="@string/filter_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
      <EditText android:id="@+id/search_string"
                android:hint="@string/filter_text_hint"
                android:inputType="textNoSuggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
      />

    <View android:layout_height="2dip" android:layout_width="match_parent"
          android:background="#FF909090" />

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/genre_view">
      <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre_label"/>
      <Spinner android:id="@+id/genre_spinner"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:prompt="@string/genre_prompt"
               android:layout_weight="1"
      />
      </LinearLayout>

    <View android:layout_height="2dip" android:layout_width="match_parent"
          android:background="#FF909090" />

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/year_view">
      <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/year_label"/>
      <Spinner android:id="@+id/year_spinner"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:prompt="@string/year_prompt"
               android:layout_weight="1"
      />
    </LinearLayout>
  </LinearLayout>
</ScrollView>