<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright (c) 2009 Google Inc.  All Rights Reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:id="@+id/album"
        android:layout_height="0dip"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:layout_weight="1"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

    <TextView android:id="@+id/trackname"
        android:ellipsize="marquee"
        android:hint="@string/unknown_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:marqueeRepeatLimit="marquee_forever"
        android:textAppearance="@style/SqueezerTextItem"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"/>

    <TextView android:id="@+id/albumname"
        android:ellipsize="marquee"
        android:hint="@string/unknown_album"
        android:gravity="left"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:marqueeRepeatLimit="marquee_forever"
        android:textAppearance="@style/SqueezerTextItemSmall"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"/>

    <TextView android:id="@+id/artistname"
        android:ellipsize="marquee"
        android:hint="@string/unknown_artist"
        android:gravity="left"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:marqueeRepeatLimit="marquee_forever"
        android:textAppearance="@style/SqueezerTextItemSmall"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"/>

    <LinearLayout
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="4dp"
        android:orientation="horizontal">

        <TextView android:id="@+id/currenttime"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/SqueezerTextItemSmall" />

        <SeekBar
            android:id="@+id/seekbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="32dip" />

        <TextView android:id="@+id/totaltime"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/SqueezerTextItemSmall" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="4dp"
        android:orientation="horizontal">

        <ImageButton android:id="@+id/shuffle"
            style="@style/MediaButton.Shuffle" />

        <uk.org.ngo.squeezer.widgets.RepeatingImageButton android:id="@+id/prev"
            style="@style/MediaButton.Previous" />

        <ImageButton android:id="@+id/pause"
            style="@style/MediaButton.Play" />

        <uk.org.ngo.squeezer.widgets.RepeatingImageButton android:id="@+id/next"
            style="@style/MediaButton.Next" />

        <ImageButton android:id="@+id/repeat"
            style="@style/MediaButton.Repeat" />
    </LinearLayout>
</LinearLayout>


